WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87536
REGRESSION(
r111742
): box-sizing: border-box doesn't work on fixed table layout
https://bugs.webkit.org/show_bug.cgi?id=87536
Summary
REGRESSION(r111742): box-sizing: border-box doesn't work on fixed table layout
Julien Chaffraix
Reported
2012-05-25 14:33:45 PDT
Created
attachment 144148
[details]
Test case: the rows should be 100px wide, not 120px During the review of
bug 78412
, box-sizing interaction was mentioned but unfortunately the patch went in without this being tested in any way. This is unfortunate as box-sizing: border-box was the way to mitigate the web-compatibility issue from the original change: it make us correctly interpret width per CSS 2.1 but in an incompatible manner.
Attachments
Test case: the rows should be 100px wide, not 120px
(583 bytes, text/html)
2012-05-25 14:33 PDT
,
Julien Chaffraix
no flags
Details
Proposed fix. Take into account the box-sizing when computing the cell's size, refactored the code as we go.
(18.67 KB, patch)
2012-05-25 16:39 PDT
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
Proposed fix (ct'd). Take into account the box-sizing when computing the cell's size, refactored the code as we go.
(18.59 KB, patch)
2012-05-25 16:51 PDT
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Julien Chaffraix
Comment 1
2012-05-25 16:39:00 PDT
Created
attachment 144169
[details]
Proposed fix. Take into account the box-sizing when computing the cell's size, refactored the code as we go.
Julien Chaffraix
Comment 2
2012-05-25 16:51:22 PDT
Created
attachment 144171
[details]
Proposed fix (ct'd). Take into account the box-sizing when computing the cell's size, refactored the code as we go.
Julien Chaffraix
Comment 3
2012-05-29 11:32:01 PDT
Comment on
attachment 144171
[details]
Proposed fix (ct'd). Take into account the box-sizing when computing the cell's size, refactored the code as we go. Thanks Tony!
WebKit Review Bot
Comment 4
2012-05-29 12:31:01 PDT
Comment on
attachment 144171
[details]
Proposed fix (ct'd). Take into account the box-sizing when computing the cell's size, refactored the code as we go. Clearing flags on attachment: 144171 Committed
r118819
: <
http://trac.webkit.org/changeset/118819
>
WebKit Review Bot
Comment 5
2012-05-29 12:31:07 PDT
All reviewed patches have been landed. Closing bug.
Andy Estes
Comment 6
2012-05-31 11:49:38 PDT
<
rdar://problem/11567612
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug